<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tamir.mystylebuttons.MainActivity">

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/buttonDefault"
        style="@style/AppMyStyleButton"
        android:text="@string/DEFAULT"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/buttonPrimary"
        style="@style/AppMyStyleButton"
        android:text="@string/primary"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/buttonInfo"
        style="@style/AppMyStyleButton"
        android:text="@string/info"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_bright"/>
</LinearLayout>
